# waasp-py

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api-design.md  async-architecture.md  data-model.md  deployment.md  security-model.md
migrations/: env.py
research/: findings-wpy-kw2.1.md
src/waasp/: __init__.py  app.py  cli.py  config.py
src/waasp/api/: __init__.py  audit.py  auth.py  check.py  contacts.py
src/waasp/models/: __init__.py  audit.py  base.py  contact.py
src/waasp/schemas/: __init__.py  audit.py  check.py  contact.py
src/waasp/services/: __init__.py  audit.py  whitelist.py
src/waasp/tasks/: __init__.py  notifications.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_edge_cases.py  test_error_handling.py  test_models.py  test_whitelist_service.py
